@startuml

class BigPanel{
    this.setLayout(new CardLayout)
    this.add(logSignInPanel)
    this.add(navPanel)
}
BigPanel ..> logInSignUpPanel
BigPanel ..> navPanel

class logInSignUpPanel extends JSplitPane{
    JPanel logIn
    JTextField email
    JPasswordField password

    JPanel signIn

    this.add(logIn, BorderLayout.WEST)
    this.add(signIn, BorderLayout.East)
}

class navPanel extends JTabbedPane{

}

@enduml